--- a/Baha'i/AB/SAQ/Cover.html
+++ b/Baha'i/AB/SAQ/Cover.html
@@ -50,7 +50,7 @@
 	<center><h1>SOME<br>ANSWERED<br>QUESTIONS</h1>
 	<h2><i>'Abdu'l-Bahá</i></h2>
 	<br><br>
-	<i><h3>Collected and translated<br>from the Persian<br>by<br>Laura Clifford Barney</h3></i>
+	<i><h3>Collected and translated<br>from the Persian<br>by<br><a href="../../../CLUI/UnifiedIndex.html#SomeAnsweredQuestionsBarney,Laura">Laura Clifford Barney</a></h3></i>
 	<br><br><br><br><br><br>
 	BAHÁ'Í PUBLISHING TRUST<P>WILMETTE, ILLINOIS 60091</center>
 	<br><br><br>
