--- a/Baha'i/AB/SAQ/Foreword.html
+++ b/Baha'i/AB/SAQ/Foreword.html
@@ -38,7 +38,10 @@
 	<center><h3>PUBLISHER'S FOREWORD TO 1981 EDITION</h3></center>
 	</td>
 	<td VALIGN=top width="20%"><small>
-	</small></td>
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#SomeAnsweredQuestions"><i>Some Answered Questions</i></a>]
+	</small>
+	</td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">ix</DIV></center><p></small></td>
 </tr>
 <tr>
@@ -55,7 +58,8 @@
 	<i>Some Answered Questions</i> addresses, in a charming, succinct, and logical manner, not only questions about God and the relationship between science and religion but a wide range of questions certain to be of interest to the soul in search of religious truth as well as to the inquisitive, scientific mind. The answers come from 'Abdu'l-Bahá, son of the Prophet-Founder of the Bahá'í Faith, a new and independent world religion with followers in virtually every country. The answers were compiled from a series of talks He gave at table during 1904, 1905, and 1906. In each of the five sections of the book 'Abdu'l-Bahá expounds questions ranging from the metaphysical to the matter-of-fact. On the one hand, He reaches into the philosophical realm to discuss topics such as immortality, predestination, free will, and the erroneous doctrine of reincarnation-always treading the mystical path with practical feet. On the other hand, He speaks to questions concerning the <a name="px"></a>organization of human society-questions such as the problem of strikes, the treatment of criminals, and the proper relations between capital and labor-infusing these ordinarily secular matters with spiritual significance.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#'Abdu'l-Bahá">'Abdu'l-Bahá</a>]
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">x</DIV></center><p></small></td>
 </tr>
@@ -267,7 +271,8 @@
 	<br>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#SomeAnsweredQuestionsBarney,Laura">Laura Clifford Barney</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
