--- a/Baha'i/AB/SAQ/p081-140Part2.html
+++ b/Baha'i/AB/SAQ/p081-140Part2.html
@@ -116,7 +116,8 @@
 	<td VALIGN=top><small>
 	1. Extract from the letter to Násiri'd-Dín Sháh.
 	<hr>
-	["This is the state..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p337-369Ch16.html#p347">p. 347</a>
+	["This is the state..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p337-369Ch16.html#p347">p. 347</a><p>
+	[CLUI: "O king! I was but a man...", <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -472,7 +473,7 @@
 	<i>Question</i>.--The Christ said: "I am the living bread which came down from heaven, that a man may eat thereof and not die." <sup>1</sup> What is the meaning of this utterance?
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 6:51, 50.
+	1. Cf. John <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:51">6:51</a>, <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:50">50</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -499,7 +500,8 @@
 	It is evident that the bread of which the disciples ate and were filled was the heavenly bounty; for in verse 33 of the same chapter it is said: "For the bread of God is He which cometh down from heaven, and giveth life unto the world." It is clear that the body of Christ did not descend from heaven, but it came from the womb of Mary; and that which descended from the heaven of God was the spirit of Christ. As the Jews thought that Christ spoke of His body, they made objections, for it is said in the 42nd verse of the same chapter: "And they said, Is not this Jesus, the son of Joseph, whose father and mother we<a name="p98"></a> know? how is it then that he saith, I came down from heaven?"
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:42">John 6:42</a>]
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">98</DIV></center><p></small></td>
 </tr>
@@ -626,7 +628,7 @@
 	The outward miracles have no importance for the people of Reality. If a blind man receives sight, for example, he will finally again become sightless, for he will die and be deprived of all his senses and powers. Therefore, causing the blind man to see is comparatively of little importance, for this faculty of sight will at last disappear. If the body of a dead person be resuscitated, of what use is it since the body will die again? But it is important to give perception and eternal life--that is, the spiritual and divine life. For this physical life is not immortal, and its existence is equivalent to nonexistence. So it is that Christ said to one of His disciples: "Let the dead bury their dead;" for "That which is born of the flesh is flesh; and that which is born of the Spirit is spirit." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Matt. 8:22; John 3:6.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleMatthew8:22">Matt. 8:22</a>; <a href="../../../CLUI/UnifiedIndex.html#BibleJohn3:6">John 3:6</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -681,7 +683,11 @@
 	<i>Answer</i>.--The resurrections of the Divine Manifestations are not of the body. All Their states, Their conditions, Their acts, the things They have established, Their teachings, Their expressions, Their parables and Their instructions have a spiritual and divine signification, and have no connection with material things. For example, there is the subject of Christ's coming from heaven: it is clearly stated in many places in the Gospel that the Son of man came from heaven, He is in heaven, and He will go to heaven. So in chapter 6, verse 38, of the Gospel of John it is written: "For I came down from heaven"; and also in verse 42 we find: "And they said, Is not this Jesus, the son of Joseph, whose father and mother we know? How is it then that he saith, I came down from heaven?" Also in John, chapter 3, verse 13: "And no man hath ascended up to heaven, but He that came down from heaven, even the Son of man which is in heaven."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI:<br>
+	<a href="../../../CLUI/UnifiedIndex.html#BibleJohn3:13">John 3:13</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:42">John 6:42</a><br>
+	}
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -852,13 +858,14 @@
 </tr>
 <tr>
 	<td><a name="para90"></a>
-	It is said in the Holy Books that Christ will come again, and that His coming depends upon the fulfillment of certain signs: when He comes, it will be with these signs. For example, "The sun will be darkened, and the moon shall not give her light, and the stars shall fall from heaven.... And then shall appear the sign of the Son of man in heaven: and then shall all the tribes of the earth mourn, and they shall see the Son of man coming in the clouds of heaven with power and great glory." <sup>1</sup> Bahá'u'lláh has explained these verses in the Kitáb-i-Iqán. <sup>2</sup> There is no need of repetition; refer to it, and you will understand these sayings.
+	It is said in the Holy Books that Christ will come again, and that His coming depends upon the fulfillment of certain signs: when He comes, it will be with these signs. For example, "The sun will be darkened, and the moon shall not give her light, and the stars shall fall from heaven.... And then shall appear the sign of the Son of man in heaven: and then shall all the tribes of the earth mourn, and they shall see the Son of man coming in the clouds of heaven with power and great glory." <sup>1</sup> Bahá'u'lláh has explained these verses in the Kitáb-i-Íqán. <sup>2</sup> There is no need of repetition; refer to it, and you will understand these sayings.
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. Matt. 24:29-30.<p>
-	2. <a href="../../Baha/KI/Cover.html">Kitáb-i-Iqán</a>, one of the first works of Bahá'u'lláh, written at Baghdád, before the declaration of His manifestation.
+	1. Cf. Matt. 24:<a href="../../../CLUI/UnifiedIndex.html#BibleMatthew24:29">29</a>-<a href="../../../CLUI/UnifiedIndex.html#BibleMatthew24:30">30</a>.<p>
+	2. Kitáb-i-Íqán, one of the first works of Bahá'u'lláh, written at Baghdád, before the declaration of His manifestation.
 	<hr>
-	["...and then shall all the tribes..."] <i>The Kitáb-i-Iqán</i>, <a href="../../Baha/KI/p001-094.html#para25">p. 25</a>, <a href="../../Baha/KI/p001-094.html#para75">p. 66</a> 
+	["...and then shall all the tribes..."] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p001-094.html#para25">p. 25</a>, <a href="../../Baha/KI/p001-094.html#para75">p. 66</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Íqán"><i>Kitáb-i-Íqán</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -867,7 +874,7 @@
 	But I have something further to say upon this subject. At His first coming Christ also came from heaven, as it is explicitly stated in the Gospel. Christ Himself says: "And no man hath ascended up to heaven, but He that came down from heaven, even the Son of man which is in heaven." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. John 3:13.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn3:13">John 3:13</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -901,7 +908,7 @@
 </tr>
 <tr>
 	<td><a name="para95"></a>
-	It is clear and evident that these signs have symbolic signification, and that they are not literal. They are fully explained in the Kitáb-i-Iqán. Refer to it.
+	It is clear and evident that these signs have symbolic signification, and that they are not literal. They are fully explained in the Kitáb-i-Íqán. Refer to it.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -1106,6 +1113,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. <i>Abu'l-bashar</i>, i.e., the father of man, is one of the titles given by the Muslims to Adam.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodAdam">Adam</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">119</DIV></center><p></small></td>
 </tr>
@@ -1177,7 +1186,7 @@
 	The position of Christ was that of absolute perfection; He made His divine perfections shine like the sun upon all believing souls, and the bounties of the light shone and radiated in the reality of men. This is why He says: "I am the bread which descended from heaven; whosoever shall eat of this bread will not die" <sup>1</sup> --that is to say, that whosoever shall partake of this divine food will attain unto eternal life: that is, every one who partakes of this bounty and receives these perfections will find eternal life, will obtain preexistent favors, will be freed from the darkness of error, and will be illuminated by the light of His guidance.
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 6:41, 50, 58.
+	1. Cf. John 6:41, <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:50">50</a>, 58.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1262,6 +1271,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Bahá'u'lláh.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh">Bahá'u'lláh</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1280,7 +1291,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Bahá'u'lláh.<p>
-	2. Cf. John 6:51.
+	2. Cf. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:51">John 6:51</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1298,7 +1309,7 @@
 	No; it means what has already been said: Adam is the spirit of Adam, and Eve is His soul; the tree is the human world, and the serpent is that attachment to this world which constitutes sin, and which has infected the descendants of Adam. Christ by His holy breezes saved men from this attachment and freed them from this sin. The sin in Adam is relative to His position. Although from this attachment there proceed results, nevertheless, attachment to the earthly world, in relation to attachment to the spiritual world, is considered as a sin. The good deeds of the righteous are the sins of the Near Ones. This is established. So bodily power is not only defective in relation to spiritual power; it is weakness in comparison. In the same way, physical life, in comparison with eternal life in the Kingdom, is considered as death. So Christ called the physical life death, and said: "Let the dead bury their dead." <sup>1</sup> Though those souls possessed physical life, yet in His eyes that life was death.
 	</td>
 	<td VALIGN=top><small>
-	1. Matt. 8:22.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleMatthew8:22">Matt. 8:22</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1432,7 +1443,7 @@
 </tr>
 <tr>
 	<td><a name="para153"></a>
-	In the same way consider the body of man. It must be composed of different organs, parts and members. Human<a name="p130"></a>beauty and perfection require the existence of the ear, the eye, the brain and even that of the nails and hair; if man were all brain, eyes or ears, it would be equivalent to imperfection. So the absence of hair, eyelashes, teeth and nails would be an absolute defect, though in comparison with the eye they are without feeling, and in this resemble the mineral and plant; but their absence in the body of man is necessarily faulty and displeasing.
+	In the same way consider the body of man. It must be composed of different organs, parts and members. Human<a name="p130"></a> beauty and perfection require the existence of the ear, the eye, the brain and even that of the nails and hair; if man were all brain, eyes or ears, it would be equivalent to imperfection. So the absence of hair, eyelashes, teeth and nails would be an absolute defect, though in comparison with the eye they are without feeling, and in this resemble the mineral and plant; but their absence in the body of man is necessarily faulty and displeasing.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -1560,7 +1571,7 @@
 </tr>
 <tr>
 	<td><a name="para167"></a>
-	This subject is fully and clearly explained in the Kitáb-i-Iqán.
+	This subject is fully and clearly explained in the Kitáb-i-Íqán.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
