--- a/Baha'i/AB/SAQ/p141-174Part3.html
+++ b/Baha'i/AB/SAQ/p141-174Part3.html
@@ -187,7 +187,9 @@
 	Accordingly all these attributes, names, praises and eulogies apply to the Places of Manifestation; and all that we imagine and suppose beside them is mere imagination, for we have no means of comprehending that which is invisible and inaccessible. This is why it is said: "All that you have distinguished through the illusion of your imagination in your subtle mental images is but a creation like unto yourself, and returns to you." <sup>1</sup> It is clear that if we wish to imagine the Reality of Divinity, this imagination is the surrounded, and we are the surrounding one; and it is sure that the one who surrounds is greater than the surrounded. From this it is certain and evident that if we imagine a Divine Reality outside of the Holy Manifestations, it is pure imagination, for there is no way to approach the Reality of Divinity which is not cut off to us, and all that we imagine is mere supposition.
 	</td>
 	<td VALIGN=top><small>
-	1. From a hádith.
+	1. From a hadíth.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Hadíth">Hadíth</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -196,7 +198,7 @@
 	Therefore, reflect that different peoples of the world are revolving around imaginations and are worshipers of the idols of thoughts and conjectures. They are not aware of this; they consider their imaginations to be the Reality which is withdrawn from all comprehension and purified from all descriptions. They regard themselves as the people of Unity, and the others as worshipers of idols; but idols at least have a mineral existence, while the idols of thoughts and the imaginations of man are but fancies; they have not even mineral existence. "Take heed ye who are endued with discernment." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 59:2.
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án59:2">Qur'án 59:2</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -287,7 +289,7 @@
 	Then it is evident that the Manifestations possess three conditions: the physical condition, the condition of the rational soul, and the condition of the divine appearance and heavenly splendor. The physical condition will certainly become decomposed, but the condition of the rational soul, though it has a beginning, has no end: nay, it is endowed with everlasting life. But the Holy Reality, of which Christ says, "The Father is in the Son," <sup>1</sup> has neither beginning nor end. When beginning is spoken of, it signifies the state of manifesting; and, symbolically, the condition of silence is compared to sleep. For example, a man is sleeping--when he begins to speak, he is awake-- but it is always the same individual, whether he be asleep or awake; no difference has occurred in his station, his elevation, his glory, his reality or his nature. The state of silence is compared to sleep, and that of manifestation to wakefulness. A man sleeping or waking is the same man; sleep is one state, and wakefulness is another. The time of silence is compared to sleep, and manifestation and guidance are compared to wakefulness.
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 14:11; 17:21.
+	1. Cf. John <a href="../../../CLUI/UnifiedIndex.html#BibleJohn14:11">14:11</a>; <a href="../../../CLUI/UnifiedIndex.html#BibleJohn17:21">17:21</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -296,7 +298,7 @@
 	In the Gospel it is said, "In the beginning was the Word, and the Word was with God." <sup>1</sup> Then it is evident and clear that Christ did not reach to the station of Messiahship and its perfections at the time of baptism, when the Holy Spirit descended upon Him in the likeness of a dove. Nay, the Word of God from all eternity has always been, and will be, in the exaltation of sanctification.
 	</td>
 	<td VALIGN=top><small>
-	1. John 1:1.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn1:1">John 1:1</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -369,7 +371,7 @@
 	 In the world of God there is no past, no future and no present; all are one. So when Christ said, "In the beginning was the Word" <sup>1</sup> --that means it was, is and shall be; for in the world of God there is no time. Time has sway over creatures but not over God. For example, in the prayer He says, "Hallowed be Thy name"; the meaning is that Thy name was, is and shall be hallowed. <sup>2</sup> Morning, noon and evening are related to this earth, but in the sun there is neither morning, noon nor evening.
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 1:1.<p>
+	1. Cf. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn1:1">John 1:1</a>.<p>
 	2. Matt. 6:9; Luke 11:2.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -545,7 +547,7 @@
 	In like manner, the Holy Manifestations of God are the centers of the light of reality, of the source of mysteries, and of the bounties of love. They are resplendent in the world of hearts and thoughts, and shower eternal graces upon the world of spirits; They give spiritual life and are shining with the light of realities and meanings. The enlightenment of the world of thought comes from these centers of light and sources of mysteries. Without the bounty of the splendor and the instructions of these Holy Beings the world of souls and thoughts would be opaque darkness. Without the irrefutable teachings of those sources of mysteries the human world would become the pasture of animal appetites and qualities, the existence of<a name="p163"></a> everything would be unreal, and there would be no true life. That is why it is said in the Gospel: "In the beginning was the Word," meaning that it became the cause of all life. <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. John 1:1.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn1:1">John 1:1</a>.
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">163</DIV></center><p></small></td>
 </tr>
@@ -829,7 +831,9 @@
 	</td>
 	<td VALIGN=top><small>
 	1. The Manifestation of God.<p>
-	2. <a href="../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a>: i.e., The Most Holy Book. The principal work of Bahá'u'lláh, which contains the greater part of the commandments. It is the basis of the principles of the Bahá'í Faith.
+	2. Kitáb-i-Aqdas: i.e., The Most Holy Book. The principal work of Bahá'u'lláh, which contains the greater part of the commandments. It is the basis of the principles of the Bahá'í Faith.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Aqdas"><i>Kitáb-i-Aqdas</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -857,6 +861,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. The House of Justice (<i>Baytu'l-Adl</i>) is an institution created by Bahá'u'lláh. He refers to two levels of this institution: the Local Houses of Justice, responsible for each town or village, and the Universal House of Justice. 'Abdu'l-Bahá, in His Will and Testament, added an intermediate level, the Secondary Houses of Justice. It is only on the Universal House of Justice that infallibility has been conferred. At the present time, to stress their purely spiritual functions, the Local and Secondary Houses of Justice are designated Local and National Spiritual Assemblies.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#HouseofJustice">House(s) of Justice</a>]
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">173</DIV></center><p></small></td>
 </tr>
