--- a/Baha'i/AB/SAQ/p175-260Part4.html
+++ b/Baha'i/AB/SAQ/p175-260Part4.html
@@ -8,7 +8,24 @@
 <html>
 <head>
 	<title>Some Answered Questions, Part 4</title>
+
+	<style>
+	/* highlighted href*/
+	a.hh:link, a.hh:visited {
+	  background-color: #ffffCF;
+	  color: black;
+	  text-decoration: none;
+	  display: inline-block;
+	  }
+
+	a.hh:hover, a.hh:active {
+	 text-decoration:underline;
+	 }
+	</style>
+		
 </head>
+
+
 
 <body>
 
@@ -187,7 +204,7 @@
 	Let us return to our subject that man, in the beginning of his existence and in the womb of the earth, like the embryo in the womb of the mother, gradually grew and developed, and passed from one form to another, from one shape to another, until he appeared with this beauty and perfection, this force and this power. It is certain that in the beginning he had not this loveliness and grace and elegance, and that he only by degrees attained this shape, this form, this beauty and this grace. There is no doubt that the human embryo did not at once appear in this form; neither did it then become the manifestation of the words "Blessed, therefore, be God, the most excellent of Makers." <sup>1</sup> Gradually it passed through various conditions and different shapes, until it attained this form and beauty, this perfection, grace and loveliness. Thus it is evident and confirmed that the development and growth of man on this earth, until he reached his present perfection, resembled the growth and development of the embryo in the womb of the mother: by degrees it passed from condition to condition, from form to form, from one shape to another, for this is according to the requirement of the universal system and Divine Law.
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 23:14.
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án23:14">Qur'án 23:14</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -379,7 +396,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. i.e., if we admit, for example, that man had formerly been a quadruped, or had had a tail.<p>
-	2. Cf. Gen. 1:26.
+	2. Cf. <a href="../../../CLUI/UnifiedIndex.html#BibleGenesis1:26">Gen. 1:26</a>.
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">194</DIV></center><p></small></td>
 </tr>
@@ -687,7 +704,7 @@
 	But the proceeding through manifestation (if by this is meant the divine appearance, and not division into parts), we have said, is the proceeding and the appearance of the Holy Spirit and the Word, which is from God. As it is said in the Gospel of John, "In the beginning was the Word, and the Word was with God"; <sup>1</sup> then the Holy Spirit and the Word are the appearance of God. The Spirit and the Word mean the divine perfections that appeared in the Reality of Christ, and these perfections were with God; so the sun manifests all its glory in the mirror. For the Word does not signify the body of Christ, no, but the divine perfections manifested in Him. For Christ was like a clear mirror which was facing the Sun of Reality; and the perfections of the Sun of Reality--that is to say, its light and heat--were visible and apparent in this mirror. If we look into the mirror, we see the sun, and we say, "It is the sun." Therefore, the Word and the Holy Spirit, which signify the perfections of God, are the divine appearance. This is the meaning of the verse in the Gospel which says: "The Word was with God, and the Word was God"; <sup>1</sup> for the divine perfections are not different from the Essence of Oneness. The perfections of Christ are called the Word because all the beings are in the condition of letters, and one letter has not a complete meaning, while the perfections of Christ have the power of the word because a complete<a name="p207"></a> meaning can be inferred from a word. As the Reality of Christ was the manifestation of the divine perfections, therefore, it was like the word. Why? because He is the sum of perfect meanings. This is why He is called the Word.
 	</td>
 	<td VALIGN=top><small>
-	1. John 1:1.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn1:1">John 1:1</a>.
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">207</DIV></center><p></small></td>
 </tr>
@@ -705,7 +722,7 @@
 	The Sun of Reality, as we have said, has always been in one condition; it has no change, no alteration, no transformation and no vicissitude. It is eternal and everlasting. But the Holy Reality of the Word of God is in the condition of the pure, fine and shining mirror; the heat, the light, the image and likeness--that is to say, the perfections of the Sun of Reality--appear in it. That is why Christ says in the Gospel, "The Father is in the Son"--that is to say, the Sun of Reality appears in the mirror. <sup>1</sup> Praise be to the One Who shone upon this Holy Reality, Who is sanctified among the beings!
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 14:11; 17:21.
+	1. Cf. John <a href="../../../CLUI/UnifiedIndex.html#BibleJohn14:11">14:11</a>; <a href="../../../CLUI/UnifiedIndex.html#BibleJohn17:21">17:21</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -898,6 +915,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Bahá'u'lláh.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh">Bahá'u'lláh</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1134,7 +1153,7 @@
 	The immortality of the spirit is mentioned in the Holy Books; it is the fundamental basis of the divine religions. Now punishments and rewards are said to be of two kinds: first, the rewards and punishments of this life; second, those of the other world. But the paradise and hell of existence are found in all the worlds of God, whether in this world or in the spiritual heavenly worlds. Gaining these rewards is the gaining of eternal life. That is why Christ said, "Act in such a way that you may find eternal life, and that you may be born of water and the spirit, so that you may enter into the Kingdom." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 3:5.
+	1. Cf. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn3:5">John 3:5</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1152,7 +1171,7 @@
 	Likewise, the rewards of the other world are the eternal life which is clearly mentioned in all the Holy Books, the divine perfections, the eternal bounties and everlasting felicity. The rewards of the other world are the perfections and the peace obtained in the spiritual worlds after leaving this world, while the rewards of this life are the real luminous perfections which are realized in this world, and which are the cause of eternal life, for they are the very progress of existence. It is like the man who passes from the embryonic world to the state of maturity and becomes the manifestation of these words: "Blessed, therefore, be God, the most excellent of Makers." <sup>1</sup> The rewards of the<a name="p225"></a> other world are peace, the spiritual graces, the various spiritual gifts in the Kingdom of God, the gaining of the desires of the heart and the soul, and the meeting of God in the world of eternity. In the same way the punishments of the other world--that is to say, the torments of the other world--consist in being deprived of the special divine blessings and the absolute bounties, and falling into the lowest degrees of existence. He who is deprived of these divine favors, although he continues after death, is considered as dead by the people of truth.
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 23:14.
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án23:14">Qur'án 23:14</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">225</DIV></center><p></small></td>
 </tr>
@@ -1216,7 +1235,7 @@
 	The other manifestation of the powers and actions of the spirit is without instruments and organs. For example, in the state of sleep without eyes it sees; without an ear it hears; without a tongue it speaks; without feet it runs. Briefly, these actions are beyond the means of instruments and organs. How often it happens that it sees a dream in the world of sleep, and its signification becomes apparent two years afterward in corresponding events. In the same way, how many times it happens that a question which one cannot solve in the world of wakefulness is solved in the world of dreams. In wakefulness the eye sees only for a short distance, but in dreams he who is in the East sees the West. Awake he sees the present; in sleep he sees the future. In wakefulness, by means of rapid transit, at the most he can travel only twenty farsakhs <sup>1</sup> an hour; in sleep, in the twinkling of an eye, he traverses the East and West. For the spirit travels in two different ways: without<a name="p228"></a> means, which is spiritual traveling; and with means, which is material traveling: as birds which fly, and those which are carried.
 	</td>
 	<td VALIGN=top><small>
-	1. One <i>farsakh</i> is equivalent to about four miles.
+	1. One <a class="hh" title="Unit of measurement. Its length differs in different parts of the country according to the nature of the ground, the local interpretation of the term being the distance which a laden mule will walk in the hour, which varies from three to four miles. Arabicised from the old Persian 'parsang,' and supposed to be derived from pieces of stone (sang) placed on the roadside." href="../CLUG/UnifiedGlossary.html#Farsakh"><i>farsakh</i></a> is equivalent to about four miles.
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">228</DIV></center><p></small></td>
 </tr>
@@ -1391,6 +1410,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Mírzá Yahyá Subh-i-Azal, half-brother of Bahá'u'lláh, and His irreconcilable enemy.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Yahyá,Mírzá">Mírzá Yahyá</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1446,7 +1467,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#p19">&para;1</a>
+	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#p19">&para;1</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Aqdas"><i>Kitáb-i-Aqdas</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
