--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -280,7 +280,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para62">&para;62</a> 
+	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para62">&para;62</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Aqdas"><i>Kitáb-i-Aqdas</i></a>]	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -534,7 +535,7 @@
     That is why those who were heedless and denied God were said by Christ to be dead, although they were apparently living; in relation to the people of faith they were dead, blind, deaf and dumb. This is what Christ meant when He said, "Let the dead bury their dead." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Matt. 8:22.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleMatthew8:22">Matt. 8:22</a>.
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">279</DIV></center><p></small></td>
 </tr>
@@ -684,6 +685,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. The infernal tree mentioned in the Qur'án.
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#TermsZaqqúm">Tree of Zaqqúm</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -721,7 +724,7 @@
 	The idea that existence is restricted to this perishable world, and the denial of the existence of divine worlds, originally proceeded from the imaginations of certain believers in reincarnation; but the divine worlds are infinite. If the divine worlds culminated in this material world, creation would be futile: nay, existence would be pure child's play. The result of these endless beings, which is the noble existence of man, would come and go for a few days in this perishable dwelling, and after receiving punishments and rewards, at last all would become perfect. The divine creation and the infinite existing beings would be perfected and completed, and then the Divinity of the Lord, and the names and qualities of God, on behalf of these spiritual beings, would, as regards their effect, result in laziness and inaction! "Glory to thy Lord, the Lord Who is sanctified from all their descriptions." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. Qur'án 37:180.
+	1. Cf. <a href="../../../CLUI/UnifiedIndex.html#Qur'án37:180">Qur'án 37:180</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -730,7 +733,7 @@
 	Such were the limited minds of the former philosophers, like Ptolemy and the others who believed and imagined that the world, life and existence were restricted to this terrestrial globe, and that this boundless space was confined within the nine spheres of heaven, and that all were empty and void. Consider how greatly their thoughts were limited and how weak their minds. Those who believe in reincarnation think that the spiritual worlds are restricted to the worlds of human imagination. Moreover, some of them, like the Druzes and the<a name="p288"></a> Nusayris, think that existence is restricted to this physical world. What an ignorant supposition! For in this universe of God, which appears in the most complete perfection, beauty and grandeur, the luminous stars of the material universe are innumerable! Then we must reflect how limitless and infinite are the spiritual worlds, which are the essential foundation. "Take heed ye who are endued with discernment." <sup>1</sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 59:2.
+	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án59:2">Qur'án 59:2</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">288</DIV></center><p></small></td>
 </tr>
@@ -745,12 +748,15 @@
 </tr>
 <tr>
 	<td><a name="para78"></a>
-	A lamp shone in this room last night, and when tonight another lamp shines, we say the light of last night is again shining. Water flows from a fountain; then it ceases; and when it begins to flow a second time, we say this water is the same water flowing again; or we say this light is identical with the former light. It is the same with the spring of last year, when blossoms, flowers and sweet-scented herbs bloomed, and delicious fruits were brought forth; next year we say that those delicious fruits have come back, and those blossoms, flowers and blooms have returned and come again. This does not mean that exactly the same particles composing the flowers of last year have, after decomposition, been again combined and have then come back and returned. On the contrary, the meaning is that the delicacy, freshness, delicious perfume and wonderful<a name="p289"></a> color of the flowers of last year are visible and apparent in exactly the same manner in the flowers of this year. Briefly, this expression refers only to the resemblance and likeness which exist between the former and latter flowers. The "return" which is mentioned in the Divine Scriptures is this: it is fully explained by the Supreme Pen <sup>1</sup> in the Kitáb-i-Iqán. Refer to it, so that you may be informed of the truth of the divine mysteries.
+	A lamp shone in this room last night, and when tonight another lamp shines, we say the light of last night is again shining. Water flows from a fountain; then it ceases; and when it begins to flow a second time, we say this water is the same water flowing again; or we say this light is identical with the former light. It is the same with the spring of last year, when blossoms, flowers and sweet-scented herbs bloomed, and delicious fruits were brought forth; next year we say that those delicious fruits have come back, and those blossoms, flowers and blooms have returned and come again. This does not mean that exactly the same particles composing the flowers of last year have, after decomposition, been again combined and have then come back and returned. On the contrary, the meaning is that the delicacy, freshness, delicious perfume and wonderful<a name="p289"></a> color of the flowers of last year are visible and apparent in exactly the same manner in the flowers of this year. Briefly, this expression refers only to the resemblance and likeness which exist between the former and latter flowers. The "return" which is mentioned in the Divine Scriptures is this: it is fully explained by the Supreme Pen <sup>1</sup> in the Kitáb-i-Íqán. Refer to it, so that you may be informed of the truth of the divine mysteries.
 	</td>
 	<td VALIGN=top><small>
 	1. Bahá'u'lláh.
 	<hr>
-	["Return: symbolic meaning of"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p271-274Index.html#ReturnSymbolicmeaningof">Index</a>
+	[CLUI:<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh">Bahá'u'lláh</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#TermsinHolyWritingsReturn">Return</a><br>
+	]
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">289</DIV></center><p></small></td>
 </tr>
